[package]
name = "mqttspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.3", features =[ "vendored-ssl" ] }
env_logger = "0.10.1"
ctrlc = "3.4.1"
serde_json = "1.0.108"
clap = "4.5.1"
